package banana.republic.core;

/**
 * Game log entries.
 * Refer to class-diagram/Module4_Core_Trade.puml for full specification.
 */
public class GameLog {
    // TODO: Implement
}
