package banana.republic.core;

/**
 * Game phase enum.
 * Refer to class-diagram/Module4_Core_Trade.puml for full specification.
 */
public enum GamePhase {
    SETUP_FIRST_ROUND,
    SETUP_SECOND_ROUND,
    RESOURCE_GATHERING,
    TRADE_BUILD,
    GAME_OVER
}
