package banana.republic.core;

/**
 * Game state adapter implementing GameState interface.
 * Refer to class-diagram/Module4_Core_Trade.puml for full specification.
 */
public abstract class GameStateAdapter implements GameState {
    // TODO: Implement
}
