package banana.republic.core;

/**
 * Single log entry.
 * Refer to class-diagram/Module4_Core_Trade.puml for full specification.
 */
public class LogEntry {
    // TODO: Implement
}
