package banana.republic.core;

/**
 * Turn manager with timer integration.
 * Refer to class-diagram/Module4_Core_Trade.puml for full specification.
 */
public class TurnManager {
    // TODO: Implement
}
