package banana.republic.core;

/**
 * Turn order enum (clockwise / counter-clockwise).
 * Refer to class-diagram/Module4_Core_Trade.puml for full specification.
 */
public enum TurnOrder {
    CLOCKWISE,
    COUNTER_CLOCKWISE
}
