package banana.republic.core;

/**
 * Victory point breakdown DTO.
 * Refer to class-diagram/Module4_Core_Trade.puml for full specification.
 */
public class VictoryPointBreakdown {
    // TODO: Implement
}
