package banana.republic.plugin;

/**
 * Plugin loader using URLClassLoader + Reflection.
 * Refer to class-diagram/Module5_UI_Plugin_Save.puml for full specification.
 */
public class PluginLoader {
    // TODO: Implement
}
