package banana.republic.robber;

/**
 * Robber / Nimon Ungu mechanics.
 * Refer to class-diagram/Module3_Cards_Robber_Timer.puml for full specification.
 */
public class Robber {
    // TODO: Implement
}
