package banana.republic.save;

/**
 * Data structure for saved game state.
 * Refer to class-diagram/Module5_UI_Plugin_Save.puml for full specification.
 */
public class GameSaveData {
    // TODO: Implement
}
