package banana.republic.save;

/**
 * Game save/load manager (JSON format).
 * Refer to class-diagram/Module5_UI_Plugin_Save.puml for full specification.
 */
public class GameSaveManager {
    // TODO: Implement
}
