package banana.republic.trade;

/**
 * Trade negotiation history and state.
 * Refer to class-diagram/Module4_Core_Trade.puml for full specification.
 */
public class TradeNegotiation {
    // TODO: Implement
}
