package banana.republic.trade;

/**
 * Trade offer between two players.
 * Refer to class-diagram/Module4_Core_Trade.puml for full specification.
 */
public class TradeOffer {
    // TODO: Implement
}
