package banana.republic.trade;

/**
 * Trade validation rules.
 * Refer to class-diagram/Module4_Core_Trade.puml for full specification.
 */
public class TradeValidator {
    // TODO: Implement
}
