package banana.republic.trade;

/**
 * Validation result (valid/invalid with reason).
 * Refer to class-diagram/Module4_Core_Trade.puml for full specification.
 */
public class ValidationResult {
    // TODO: Implement
}
